--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "bool(\"art.vandelay@vandelay.co\") # False"
    ]
   },
   {
