Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "bool(\"art.vandelay@vandelay.co\") # False"
+    "bool(\"art.vandelay@vandelay.co\")='art.vandelay@vandelay' # False"
    ]
   },
   {
