--- a/index.ipynb
+++ b/index.ipynb
@@ -225,22 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-6-19cc1d4843af>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-19cc1d4843af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    bool(\"art.vandelay@vandelay.co\")='art.vandelay@vandelay.com' # False\u001b[0m\n\u001b[0m                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     ]
     }
    ],
    "source": [
-    "bool(\"art.vandelay@vandelay.co\")='art.vandelay@vandelay' # False"
+    "bool(\"art.vandelay@vandelay.co\")='art.vandelay@vandelay.com' # False"
    ]
   },
   {
