--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" =!'art.vandelay@vandelay.com' # False"
+    "\"art.vandelay@vandelay.co\" !='art.vandelay@vandelay.com' # False"
    ]
   },
   {
