--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" !='art.vandelay@vandelay.com' # False"
+    "\"art.vandelay@vandelay.co\" ='art.vandelay@vandelay.co' # False"
    ]
   },
   {
