--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -234,13 +234,13 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" ='art.vandelay@vandelay.co' # False"
+    "\"art.vandelay@vandelay.co\" =='art.vandelay@vandelay.co' # False"
    ]
   },
   {
